changed the background image on overview page and fixed logo possition on smaller screens

--- a/juci/src/css/theme.less
+++ b/juci/src/css/theme.less
@@ -149,7 +149,7 @@ a, a:focus, a:hover {
 div.logo {
 	background-image: url('../img/home.png');
 	background-size: 100% auto;
-	margin-top:12px;
+	@media (min-width: 768px) {margin-top:12px; }
 	width: 45px;
 	height: 45px;
 }
